Rewrite ReceivingMailbox to be able to unblock writers on cancellation or error (#16903)